--- a/markdown.Rmd
+++ b/markdown.Rmd
@@ -2,7 +2,9 @@
 title: "Construction jobs amount, a statistics review"
 author: "Celso Cachola"
 date: "23/07/2020"
-output: html_document
+output:
+  pdf_document: default
+  html_document: default
 ---
 
 ## Construction jobs
